--- a/parse-elm-experiment/parse-elm-experiment.cabal
+++ b/parse-elm-experiment/parse-elm-experiment.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
                      , parsec >= 3.1 && < 4
+                     , aeson >= 1 && < 2
   default-language:    Haskell2010
 
 executable parse-elm-experiment-exe
@@ -26,6 +27,8 @@ executable parse-elm-experiment-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , parse-elm-experiment
+                     , aeson >= 1 && < 2
+                     , bytestring >= 0.10 && < 0.11
   default-language:    Haskell2010
 
 test-suite parse-elm-experiment-test
