--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -1,13 +1,13 @@
-name:                parse-elm-experiment
+name:                elm-editor-tools
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/parse-elm-experiment#readme
+homepage:            https://github.com/jwoudenberg/elm-editor-tools#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
+maintainer:          mail@jasperwoudenberg.com
+copyright:           2017 Jasper Woudenberg
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
@@ -21,25 +21,25 @@ library
                      , aeson >= 1 && < 2
   default-language:    Haskell2010
 
-executable parse-elm-experiment-exe
+executable elm-editor-tools-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , parse-elm-experiment
+                     , elm-editor-tools
                      , aeson >= 1 && < 2
                      , bytestring >= 0.10 && < 0.11
   default-language:    Haskell2010
 
-test-suite parse-elm-experiment-test
+test-suite elm-editor-tools-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , parse-elm-experiment
+                     , elm-editor-tools
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/parse-elm-experiment
+  location: https://github.com/githubuser/elm-editor-tools
