--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -37,6 +37,8 @@ test-suite elm-editor-tools-test
   main-is:             Spec.hs
   build-depends:       base
                      , elm-editor-tools
+                     , tasty
+                     , tasty-hunit
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
