--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
                      , parsec >= 3.1 && < 4
+                     , indents >= 0.4.0.0 && < 0.5
                      , aeson >= 1 && < 2
   default-language:    Haskell2010
 
