--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -21,6 +21,7 @@ library
                      , indents >= 0.4.0.0 && < 0.5
                      , aeson >= 1 && < 2
   default-language:    Haskell2010
+  other-modules:       Definitions
 
 executable elm-editor-tools-exe
   hs-source-dirs:      app
