--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -20,8 +20,13 @@ library
                      , parsec >= 3.1 && < 4
                      , indents >= 0.4.0.0 && < 0.5
                      , aeson >= 1 && < 2
+                     , path >= 0.5.12 && < 0.6
+                     , path-io >= 1.2.2 && < 2
+                     , split >= 0.2.3.1 && < 0.3
+                     , bytestring >= 0.10.8.1 && < 0.11
   default-language:    Haskell2010
   other-modules:       Definitions
+                     , Imports
 
 executable elm-editor-tools-exe
   hs-source-dirs:      app
