--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -28,9 +28,9 @@ library
   other-modules:       Definitions
                      , Imports
 
-executable elm-editor-tools-exe
+executable elm-find-definitions
   hs-source-dirs:      app
-  main-is:             Main.hs
+  main-is:             FindDefinitions.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , elm-editor-tools
