--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -38,6 +38,14 @@ executable elm-find-definitions
                      , bytestring >= 0.10 && < 0.11
   default-language:    Haskell2010
 
+executable elm-resolve-module
+  hs-source-dirs:      app
+  main-is:             ResolveModule.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , elm-editor-tools
+  default-language:    Haskell2010
+
 test-suite elm-editor-tools-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
