--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -24,9 +24,12 @@ library
                      , path-io >= 1.2.2 && < 2
                      , split >= 0.2.3.1 && < 0.3
                      , bytestring >= 0.10.8.1 && < 0.11
+                     , containers >= 0.5.7.1 && < 0.6
   default-language:    Haskell2010
   other-modules:       Definitions
                      , Imports
+                     , Error
+                     , ElmConfig
 
 executable elm-find-definitions
   hs-source-dirs:      app
