--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -25,6 +25,7 @@ library
                      , split >= 0.2.3.1 && < 0.3
                      , bytestring >= 0.10.8.1 && < 0.11
                      , containers >= 0.5.7.1 && < 0.6
+                     , mtl >= 2.2.1 && < 3
   default-language:    Haskell2010
   other-modules:       Definitions
                      , Imports
