--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -28,7 +28,7 @@ library
                      , mtl >= 2.2.1 && < 3
   default-language:    Haskell2010
   other-modules:       Definitions
-                     , Imports
+                     , ResolveModule
                      , Error
                      , ElmConfig
 
