Rename ElmConfig -> ParseElmConfig

--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -30,7 +30,7 @@ library
   other-modules:       Definitions
                      , ResolveModule
                      , Error
-                     , ElmConfig
+                     , ParseElmConfig
 
 executable elm-find-definition
   hs-source-dirs:      app
