--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , ParseElmModule
   build-depends:       base >= 4.7 && < 5
                      , parsec >= 3.1 && < 4
                      , indents >= 0.4.0.0 && < 0.5
@@ -27,8 +28,7 @@ library
                      , containers >= 0.5.7.1 && < 0.6
                      , mtl >= 2.2.1 && < 3
   default-language:    Haskell2010
-  other-modules:       Definitions
-                     , ResolveModule
+  other-modules:       ResolveModule
                      , Error
                      , ParseElmConfig
 
