--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -31,11 +31,12 @@ library
   other-modules:       ResolveModule
                      , Error
                      , ParseElmConfig
+  ghc-options:         -Wall
 
 executable elm-find-definition
   hs-source-dirs:      app
   main-is:             FindDefinition.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , elm-editor-tools
                      , aeson >= 1 && < 2
@@ -45,7 +46,7 @@ executable elm-find-definition
 executable elm-resolve-module
   hs-source-dirs:      app
   main-is:             ResolveModule.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , elm-editor-tools
   default-language:    Haskell2010
@@ -58,7 +59,7 @@ test-suite elm-editor-tools-test
                      , elm-editor-tools
                      , tasty
                      , tasty-hunit
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
