--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -17,6 +17,10 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
                      , ParseElmModule
+                     , ParseElmModule.Types
+                     , ResolveModule
+                     , Error
+                     , ParseElmConfig
   build-depends:       base >= 4.7 && < 5
                      , parsec >= 3.1 && < 4
                      , indents >= 0.4.0.0 && < 0.5
@@ -28,9 +32,6 @@ library
                      , containers >= 0.5.7.1 && < 0.6
                      , mtl >= 2.2.1 && < 3
   default-language:    Haskell2010
-  other-modules:       ResolveModule
-                     , Error
-                     , ParseElmConfig
   ghc-options:         -Wall
 
 executable elm-find-definition
