Extract findDefinition to separate module

--- a/elm-editor-tools.cabal
+++ b/elm-editor-tools.cabal
@@ -21,6 +21,7 @@ library
                      , ElmTools.ResolveModule
                      , ElmTools.Error
                      , ElmTools.ParseConfig
+                     , ElmTools.FindDefinition
   build-depends:       base >= 4.7 && < 5
                      , parsec >= 3.1 && < 4
                      , indents >= 0.4.0.0 && < 0.5
